# gate-runner

./: .gitignore  README.md  pyproject.toml
configs/: endpoints.example.toml
configs/eval/: gpt-oss.toml  llama-3.toml  nemotron-3.toml  qwen-3-5-moe.toml  qwen-3-5.toml
configs/gepa/: gpt-oss.toml  llama-3.toml  nemotron-3.toml  qwen-3-5-moe.toml  qwen-3-5.toml
configs/rl/: gpt-oss.toml  llama.toml  nemotron.toml  qwen-moe.toml  qwen.toml
docs/: ADAPTERS.md
environments/gate_runner/: DATA_PROVENANCE.md  README.md  gate_runner.py  gate_runner_cli.py  pyproject.toml
environments/gate_runner/gate_runner_adapters/: __init__.py  prime.py
environments/gate_runner/gate_runner_core/: __init__.py  benchmark.py  config.py  evaluator.py  examples.py  market.py  rubric.py  scoring.py  tasks.py
environments/gate_runner/gate_runner_core/data/: public_short_rates_2008_2024.manifest.json
environments/gate_runner/tests/: test_gate_runner.py
reports/: baseline_matrix_v0_5.json  baseline_matrix_v0_5.md
scripts/: build_boe_forward_validation.py  build_public_short_rates.py  run_baseline_matrix.py  validate_cip_proxy.py
