[project]
name = "gate-runner"
version = "0.4.0"
description = "Platform-neutral honest strategy benchmark with a Prime adapter"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.14",
]

[project.urls]
Repository = "https://github.com/BR-322/gate-runner"
Documentation = "https://github.com/BR-322/gate-runner#readme"
