[project]
name = "gate-runner"
description = "Honesty-shaped strategy design with walk-forward DSR and CSCV/PBO grading"
tags = ["finance", "honest-evaluation", "train", "eval"]
version = "0.2.1"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0",
    "numpy>=1.26",
    "pydantic>=2.8",
    "verifiers>=0.1.14",
]

[project.urls]
Repository = "https://github.com/BR-322/gate-runner"
Documentation = "https://github.com/BR-322/gate-runner/tree/main/environments/gate_runner#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "gate_runner.py",
    "gate_runner_core/**/*.py",
    "gate_runner_core/data/*.csv.gz",
    "DATA_PROVENANCE.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
