[project]
name = "gate-runner"
description = "Platform-neutral strategy evaluation with grouped honesty scoring"
tags = ["finance", "honest-evaluation", "platform-neutral", "train", "eval"]
version = "0.5.0"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0",
    "numpy>=1.26",
    "pydantic>=2.8",
    "verifiers>=0.1.14",
]

[project.urls]
Repository = "https://github.com/BR-322/gate-runner"
Documentation = "https://github.com/BR-322/gate-runner/tree/main/environments/gate_runner#readme"

[project.scripts]
gate-runner = "gate_runner_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "gate_runner.py",
    "gate_runner_cli.py",
    "gate_runner_adapters/**/*.py",
    "gate_runner_core/**/*.py",
    "gate_runner_core/data/*.csv.gz",
    "gate_runner_core/data/*.json",
    "DATA_PROVENANCE.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = ["pytest>=8.3"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
